--- a/src/main.scss
+++ b/src/main.scss
@@ -13,9 +13,11 @@ div,
 textarea {
     margin: 0;
     padding: 0;
-    color: '#606266'
+    color: '#606266';
+    font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
 a {
     text-decoration: none;
 }
-
+.el-dialog__title {
+}
