--- a/src/routes/user/home/index.scss
+++ b/src/routes/user/home/index.scss
@@ -26,8 +26,8 @@
 }
 .computer {
     z-index: 10;
-    width: 422px;
-    height: 250px;
+    width: 676px;
+    height: 400px;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -35,13 +35,19 @@
     background-image: url('../../../../public/images/computer.png');
     background-size: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    .name {
+        color: #FFFFFF;
+        font-size: 96px;
+    }
 }
 .submit-btn {
     background-color: rgba(83, 168, 255, 0.2) !important;
     font-size: 20px;
     font-weight: bold;
+    margin-bottom: 30px;
 }
 .submit-btn:hover {
     background-color: #409EFF !important;
