--- a/src/routes/admin/layout/header/index.scss
+++ b/src/routes/admin/layout/header/index.scss
@@ -9,11 +9,11 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    width: 180px;
 }
 .avatar {
     height: 30px;
     width: 30px;
+    margin-left: 10px;
     border-radius: 50%;
     margin-right: 10px;
     img {
