--- a/src/routes/user/member/components/post-detail/index.scss
+++ b/src/routes/user/member/components/post-detail/index.scss
@@ -9,3 +9,9 @@ h2 {
     font-size: 18px;
     margin-bottom: 10px;
 }
+.download-attach {
+    margin-top: 10px;
+}
+.attach-name {
+    color: #409EFF;
+}
