[WN]完成礼品兑换功能模块

--- a/src/main.scss
+++ b/src/main.scss
@@ -10,6 +10,7 @@ h5,
 h6,
 input,
 div,
+pre,
 textarea {
     margin: 0;
     padding: 0;
@@ -18,6 +19,7 @@ textarea {
 }
 p,
 input,
+pre,
 textarea,
 span {
     font-size: 14px;
