--- a/src/routes/member/components/post-detail/index.scss
+++ b/src/routes/member/components/post-detail/index.scss
@@ -15,3 +15,11 @@ h2 {
 .attach-name {
     color: #409EFF;
 }
+.content {
+  position: relative;
+  .back {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+  }
+}
