--- a/src/routes/components/tip/index.scss
+++ b/src/routes/components/tip/index.scss
@@ -3,6 +3,7 @@
     height: 100px;
     margin: 0 auto;
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 .box {
@@ -19,4 +20,15 @@
 .content {
     margin-left: 50px;
     color: #606266;
+}
+.left-box {
+  display: flex;
+  align-items: center;
+}
+.points {
+  font-size: 18px;
+  color: #E6A23C;
+}
+.account {
+  padding-right: 5px;
 }
