--- a/src/routes/notice/notice-detail/index.scss
+++ b/src/routes/notice/notice-detail/index.scss
@@ -2,10 +2,6 @@
     width: 1200px;
     margin: 0 auto;
     padding: 20px 0;
-    height: 700px;
-}
-/deep/ .el-scrollbar__wrap {
-  overflow-x: hidden;
 }
 .time,
 .notice-title {
@@ -23,4 +19,10 @@
     top: 20px;
     right: 20px;
   }
+}
+.attach-name {
+  color: #409EFF;
+}
+.attach-name:hover {
+  cursor: pointer;
 }
