[WN]优化表格滚动条

--- a/src/routes/member/account/index.scss
+++ b/src/routes/member/account/index.scss
@@ -3,7 +3,7 @@
 }
 .logo {
     font-size: 60px;
-    background-color: #67C23A;
+    background-color: #409EFF;
     height: 100px;
     width: 100px;
     line-height: 100px;
@@ -21,6 +21,11 @@
 }
 .num {
     color: #409EFF;
+    font-size: 20px;
+    padding: 5px;
+}
+.score {
+    color: #E6A23C;
     font-size: 20px;
     padding: 5px;
 }
