--- a/src/routes/member/homepage/index.scss
+++ b/src/routes/member/homepage/index.scss
@@ -6,8 +6,10 @@
     align-items: center;
 }
 .avatar-box {
-    padding: 20px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 .userInfo-detail {
-    margin-left: 10px;
+    margin-left: 50px;
 }
