--- a/src/routes/ranking/index.scss
+++ b/src/routes/ranking/index.scss
@@ -26,6 +26,6 @@
 .look:hover {
   cursor: pointer;
 }
-/deep/ .el-table__row {
-  height: 80px;
-}
+// /deep/ .el-table__row {
+//   height: 80px;
+// }
