--- a/src/routes/layout/header/index.scss
+++ b/src/routes/layout/header/index.scss
@@ -15,6 +15,12 @@
     height: 60px;
     display: flex;
     align-items: center;
+    .logo-img {
+      background-image: url('../../../assets/images/lixiang.png');
+      background-size: contain;
+      height: 50px;
+      width: 50px;
+    } 
 }
 .company-name-en {
     padding: 5px 0;
